tests/backend/checkmach/fail2.ml
let[@zero_alloc strict] test x = (x,x)
